<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:layout_margin="10dp">
    <ImageView
        android:id="@+id/sign_up_icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="32dp"/>
    <LinearLayout
        android:id="@+id/hello_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/sign_up_icon">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/let_get_started"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hello_text"
        android:orientation="vertical">
        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner" />
        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner" />
        <EditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="64dp"
            android:text="@string/create_account"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:visibility="gone"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"/>
        <TextView
            android:id="@+id/login_text_view_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>